Centrage rubiscube, erreur task canceled pictures take and load ET ajout pourcents cercle de progression

--- a/MyBodyShape.Android/Assets/RubiksCube.html
+++ b/MyBodyShape.Android/Assets/RubiksCube.html
@@ -1,14 +1,5 @@
-﻿<html>
-<head>
-    <style>
-        #rubis
-        {
-            text-align : center;
-            margin : auto;
-        }
-    </style>
-</head>
-<body>
-    <img id="rubis" src="loader.gif"  />
+﻿<html style="margin:auto;text-align:center;">
+<body style="margin:auto;text-align:center;">
+    <img id="rubis" style="display:inline;margin:auto;text-align:center;" src="loader.gif"  />
 </body>
 </html>
